--- a/src/Main/FileCorrupter.fxml
+++ b/src/Main/FileCorrupter.fxml
@@ -2,13 +2,14 @@
 
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="569.0" prefWidth="525.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Controller">
    <children>
-      <Button fx:id="btnCorruptFile" layoutX="38.0" layoutY="488.0" mnemonicParsing="false" onAction="#OnClick_btnCorruptFile" prefHeight="48.0" prefWidth="449.0" style="-fx-background-color: Red;" text="Corrupt File" textFill="WHITE">
+      <Button fx:id="btnCorruptFile" layoutX="15.0" layoutY="488.0" mnemonicParsing="false" onAction="#OnClick_btnCorruptFile" prefHeight="48.0" prefWidth="491.0" text="Corrupt File" textFill="#ff0000f0">
          <font>
             <Font name="Arial Black" size="17.0" />
          </font>
@@ -16,11 +17,9 @@
             <Cursor fx:constant="WAIT" />
          </cursor>
       </Button>
-      <BorderPane layoutX="35.0" layoutY="97.0" prefHeight="355.0" prefWidth="449.0">
-         <center>
-            <Button fx:id="btnSelectFile" mnemonicParsing="false" onAction="#OnClick_btnSelectFile" text="Select File" BorderPane.alignment="CENTER" />
-         </center>
-      </BorderPane>
+      <Text layoutX="186.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" text="File Corrupter (V.1.0)" wrappingWidth="364.45849609375" />
+      <Button fx:id="btnSelectFile" layoutX="415.0" layoutY="97.0" mnemonicParsing="false" onAction="#OnClick_btnSelectFile" prefHeight="26.0" prefWidth="91.0" text="Select File" />
+      <TextField fx:id="txtFile" layoutX="15.0" layoutY="97.0" prefHeight="26.0" prefWidth="391.0" />
    </children>
    <cursor>
       <Cursor fx:constant="DEFAULT" />
